--- a/docs/styles.css
+++ b/docs/styles.css
@@ -4,6 +4,7 @@ body{
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
   height: 300px;
   min-width: 320px;
   background-color: black; 
@@ -15,11 +16,13 @@ body{
   font-size: 4rem;
   line-height: 0.5;
   opacity: 0;
+  margin: 0;
 }
 .text {
   font-family: 'Permanent Marker', cursive;
   font-size: 1.5rem;
   opacity: 0;
+  margin-top: 5rem
 }
 .underline{
   border-top: 1px solid rgb(224, 221, 221);
@@ -33,6 +36,12 @@ a {
 }
 .letter {
   display: inline-block;
+}
+
+.flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media (min-width: 640px) {
