--- a/docs/styles.css
+++ b/docs/styles.css
@@ -1,3 +1,6 @@
+html {
+  -webkit-tap-highlight-color: transparent;
+}
 body{
   display: flex;
   flex-direction: column;
@@ -22,15 +25,17 @@ body{
   font-family: 'Permanent Marker', cursive;
   font-size: 1.5rem;
   opacity: 0;
-  margin-top: 5rem
+  color: purple;
 }
 .underline{
   border-top: 1px solid rgb(224, 221, 221);
   width: 6.8rem;
-  margin-top: -25px;
-  opacity: 0
+  margin-top: -30px;
+  opacity: 0;
+  border-color: purple;
 }
 a {
+  margin-top: 4rem;
   color: inherit;
   text-decoration: none;
 }
